@@ -1,20 +1,18 @@
-# $NetBSD: Makefile,v 1.15 2019/04/03 00:33:08 ryoon Exp $
+# $NetBSD: Makefile,v 1.16 2019/07/31 20:56:33 brook Exp $
 
-PKGREVISION=	4
-CATEGORIES=	textproc
+CATEGORIES=	textproc R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/stringi/
-COMMENT=	Character String Processing Facilities
-LICENSE=	modified-bsd
+COMMENT=	Character string processing facilities
+LICENSE=	modified-bsd	# + file LICENSE
 
 R_PKGNAME=	stringi
-R_PKGVER=	1.1.6
+R_PKGVER=	1.4.3
 
-USE_LANGUAGES=	c c++
 USE_TOOLS+=	pkg-config
+USE_LANGUAGES=	c c++
 
-.include "../../textproc/icu/buildlink3.mk"
-BUILDLINK_API_DEPENDS.R+=	R>=2.14
 .include "../../math/R/Makefile.extension"
+.include "../../textproc/icu/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
